updated shift model using p5 solution and fixed broken things in its view

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -144,7 +144,7 @@ body {
 		.btn img {
 			width: 30%;
 		}
-		.new {
+		.new, .edit {
 			display: inline-block;
 			float: right;
 			padding: 0.7em 0em 0.4em 0.5em;
@@ -157,7 +157,6 @@ body {
 			}
 		}
 		.alert {
-			.box-shadow(inset 0 1px 3px rgba(34,25,25,0.6);
 			.border-radius(0);
 			padding: 8px 35px 8px 14px;
 			margin-top: -1.3em;
